# rockchip-rga-sample

./: CMakeLists.txt  README.md  env.sh  main.cpp  mem.sh
include/: args.h  image_resize.h  rga_using_interface.h
lib/libpng/include/libpng16/: pnglibconf.h
lib/libpng/lib/: libpng16.la  libpng16.so.16.37.0
lib/libpng/lib/pkgconfig/: libpng16.pc
lib/librga/include/: RgaUtils.h
librga/include/: RgaUtils.h
src/: rga_test.cpp
test/: CMakeLists.txt  opencv_test.cpp
